# Dragonfly-Pulse

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: sources.yaml
docs/: API_CONTRACT.md  ARCHITECTURE.md  BRANDING.md  INTEGRATIONS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  TARGET_SCOPE.md
scheduler/: cron_example.txt
scripts/: __init__.py  init_db.py  run_api.py  run_daily.py  run_mcp.py
src/competition_intel/: __init__.py  logging_utils.py  pipeline.py  settings.py
src/competition_intel/api/: app.py
src/competition_intel/crawler/: __init__.py  fetcher.py  sources.py
src/competition_intel/database/: db.py  models.py  repository.py
src/competition_intel/extractor/: __init__.py  content_extractor.py
src/competition_intel/llm/: __init__.py  information_extractor.py
src/competition_intel/mcp/: server.py
src/competition_intel/scheduler/: daily_scheduler.py
tests/: test_fetcher.py  test_information_extractor.py
